@@ -427,6 +427,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   a page using {{DEFAULTSORT}}
 * (bug 6449) Throw a more definitive error message when installation fails
   due to an invalid database name
+* (bug 5827) Use full text for option link labels on Special:Watchlist
 
 == Languages updated ==
 
